--- a/index.html
+++ b/index.html
@@ -14,15 +14,20 @@
 <body>
 
     <header>
-        <h1>First GitHub page</h1>
+        <nav>
+            <a href="">HOME</a>
+            <a href="">ABOUT</a>
+            <a href="">CONTACT</a>
+        </nav>
     </header>
 
     <main>
-        <h2>More coming soon...</h2>
+        <p>Hey, my name is Juan :)</p>
+        <p>This is my personal site. I'll post blog posts and projects here./p>
     </main>
 
     <footer>
-        
+        <p>Built by Juan Diego Ugueto</p>
     </footer>
 
 </body>
