--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 
     <main>
         <p>Hey, my name is Juan :)</p>
-        <p>This is my personal site. I'll post blog posts and projects here./p>
+        <p>This is my personal site. I'll post blog posts and projects here.</p>
     </main>
 
     <footer>
-        <p>Built by Juan Diego Ugueto</p>
+        <p>Built by <a href="https://www.linkedin.com/in/juan-diego-ugueto/">Juan Diego Ugueto</a></p>
     </footer>
 
 </body>
