Grid structure updated

--- a/index.html
+++ b/index.html
@@ -9,26 +9,49 @@
         <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1'>
         <meta name='copyright' content='Juan Diego Ugueto'>
         <link href='./style.css' rel='stylesheet'>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
-    <header>
-        <nav>
-            <a href="">HOME</a>
-            <a href="">ABOUT</a>
-            <a href="">CONTACT</a>
-        </nav>
-    </header>
+    <div class="container">
 
-    <main>
-        <p>Hey, my name is Juan :)</p>
-        <p>This is my personal site. I'll post blog posts and projects here.</p>
-    </main>
+        <header>
+            <h1>Welcome</h1>
+        </header>
 
-    <footer>
-        <p>Built by <a href="https://www.linkedin.com/in/juan-diego-ugueto/">Juan Diego Ugueto</a></p>
-    </footer>
+            <section class="about">
+                <h3><u>About</u></h3>
+                <p>My name is <b>Juan Diego Ugueto</b>. I'm a Computer Science and Economics student in Madrid.
+                <br>
+                I work at <a href="https://levity.ai/" target="_blank">Levity</a>, a Berlin-based AI/Automation Startup.
+                <br>
+                In here you will find info about me and what I'm up to.
+                Common topics are technology and books since I'm mostly reading or programming.
+                <br>
+                At the moment I am reading: <a href="https://www.amazon.com/Infinite-Machine-Crypto-hackers-Building-Internet-ebook/dp/B07X8HS2WC" target="_blank">The Infinite Machine</a> by Camila Russo.
+                <br>
+                Also, I am always learning new things. Currently I'm focused on Java & JavaScript.
+                </p>
+            </section>
+
+            <section class="blog">
+                <h3><u>Blog</u></h3>
+                <ul>
+                <li><a href="/">2021 Reading List: A Short Review</a></li>
+                <li><a href="/">How I Learned To Code (Not quite self-taught)</a></li>
+                <li><a href="/">Why I Started A Second Degree</a></li>
+                <li><a href="/">You Might Need A Blog</a></li>
+                </ul>
+            </section>
+
+        <footer>
+            <p> &copy; 2021 - juan@levity.ai</p>
+        </footer>
+
+    </div>
 
 </body>
 
