--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
         </header>
 
             <section class="about">
+                <img src="photo.png" alt="">
                 <h3><u>About</u></h3>
-                <p>My name is <b>Juan Diego Ugueto</b>. I'm a Computer Science and Economics student in Madrid.
+                <p>My name is <b>Juan Diego Ugueto</b>, I'm a Computer Science and Economics student in Madrid.
                 <br>
                 I work at <a href="https://levity.ai/" target="_blank">Levity</a>, a Berlin-based AI/Automation Startup.
                 <br>
