--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
         </header>
 
             <section class="about">
-                <img src="photo.png" alt="">
                 <h3><u>About</u></h3>
+                <img src="photo.png" alt="">
                 <p>My name is <b>Juan Diego Ugueto</b>, I'm a Computer Science and Economics student in Madrid.
                 <br>
-                I work at <a href="https://levity.ai/" target="_blank">Levity</a>, a Berlin-based AI/Automation Startup.
+                I work at <a href="https://levity.ai/" target="_blank">Levity</a>, a Berlin-based AI and Automation Startup.
                 <br>
                 In here you will find info about me and what I'm up to.
                 Common topics are technology and books since I'm mostly reading or programming.
                 <br>
-                At the moment I am reading: <a href="https://www.amazon.com/Infinite-Machine-Crypto-hackers-Building-Internet-ebook/dp/B07X8HS2WC" target="_blank">The Infinite Machine</a> by Camila Russo.
+                At the moment I'm reading: <a href="https://www.amazon.com/Infinite-Machine-Crypto-hackers-Building-Internet-ebook/dp/B07X8HS2WC" target="_blank">The Infinite Machine</a> by Camila Russo.
                 <br>
-                Also, I am always learning new things. Currently I'm focused on Java & JavaScript.
+                Also, I'm always learning new things. Recently I've been learning Java & JavaScript.
                 </p>
             </section>
 
