--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link href='./style.css' rel='stylesheet'>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -19,36 +19,35 @@
     <div class="container">
 
         <header>
-            <h1>Welcome</h1>
+            <h1>Juan Diego Ugueto</h1>
+            <p>Software Engineer</p>
+            <hr>
         </header>
 
             <section class="about">
                 <h3><u>About</u></h3>
-                <img src="photo.png" alt="">
-                <p>My name is <b>Juan Diego Ugueto</b>, I'm a Computer Science and Economics student in Madrid.
+                <p>My name is <b>Juan Diego Ugueto</b>. I'm a Software Engineer in Madrid working at <a href="https://levity.ai/" target="_blank">Levity</a>, a Berlin-based AI and Automation Startup.
+                I tend to write about tech and books, mostly. Plus, I'm always learning new things, recently I've been focusing on Java & JavaScript.<br>
                 <br>
-                I work at <a href="https://levity.ai/" target="_blank">Levity</a>, a Berlin-based AI and Automation Startup.
-                <br>
-                In here you will find info about me and what I'm up to.
-                Common topics are technology and books since I'm mostly reading or programming.
-                <br>
-                At the moment I'm reading: <a href="https://www.amazon.com/Infinite-Machine-Crypto-hackers-Building-Internet-ebook/dp/B07X8HS2WC" target="_blank">The Infinite Machine</a> by Camila Russo.
-                <br>
-                Also, I'm always learning new things. Recently I've been learning Java & JavaScript.
+                What I'm reading now:<br>
+                <a href="https://www.amazon.com/Infinite-Machine-Crypto-hackers-Building-Internet-ebook/dp/B07X8HS2WC" target="_blank">The Infinite Machine</a> by Camila Russo.<br>
+                <a href="https://www.amazon.com/Psychology-Money-Timeless-lessons-happiness/dp/0857197681" target="_blank">The Psychology of Money</a> by Morgan Housel.
                 </p>
             </section>
 
             <section class="blog">
                 <h3><u>Blog</u></h3>
+                <i>---- Coming Soon ----</i>
                 <ul>
                 <li><a href="/">2021 Reading List: A Short Review</a></li>
                 <li><a href="/">How I Learned To Code (Not quite self-taught)</a></li>
                 <li><a href="/">Why I Started A Second Degree</a></li>
-                <li><a href="/">You Might Need A Blog</a></li>
+                <li><a href="/">I Think You Might Need A Blog</a></li>
                 </ul>
             </section>
 
         <footer>
+            <hr>
             <p> &copy; 2021 - juan@levity.ai</p>
         </footer>
 
