--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <p>My name is <b>Juan Diego Ugueto</b>. I'm a Software Engineer in Madrid working at <a href="https://levity.ai/" target="_blank">Levity</a>, a Berlin-based AI and Automation Startup.
                 I tend to write about tech and books, mostly. Plus, I'm always learning new things, recently I've been focusing on Java & JavaScript.<br>
                 <br>
-                What I'm reading now:<br>
+                What I'm reading:<br>
                 <a href="https://www.amazon.com/Infinite-Machine-Crypto-hackers-Building-Internet-ebook/dp/B07X8HS2WC" target="_blank">The Infinite Machine</a> by Camila Russo.<br>
                 <a href="https://www.amazon.com/Psychology-Money-Timeless-lessons-happiness/dp/0857197681" target="_blank">The Psychology of Money</a> by Morgan Housel.
                 </p>
