--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             <section class="about">
                 <h3><u>About</u></h3>
-                <p>My name is <b>Juan Diego Ugueto</b>. I'm a Software Engineer in Madrid working at <a href="https://levity.ai/" target="_blank">Levity</a>, a Berlin-based AI and Automation Startup.
+                <p>I'm a Software Engineer in Madrid working at <a href="https://levity.ai/" target="_blank">Levity</a>, a Berlin-based AI and Automation Startup.
                 I tend to write about tech and books, mostly. Plus, I'm always learning new things, recently I've been focusing on Java & JavaScript.<br>
                 <br>
                 What I'm reading:<br>
