--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/0d9ce62f43.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -21,15 +22,20 @@
         <header>
             <h1>Juan Diego Ugueto</h1>
             <p>Software Engineer</p>
+            <div class="icons">
+                <a href="https://github.com/ugueto" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://linkedin.com/in/juan-diego-ugueto/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://medium.com/@ugueto96" target="_blank"><i class="fab fa-medium"></i></a>
+                <a href="https://twitter.com/ugu3to" target="_blank"><i class="fab fa-twitter"></i></a>
+            </div>
             <hr>
         </header>
 
             <section class="about">
                 <h3><u>About</u></h3>
-                <p>I'm a Software Engineer in Madrid working at <a href="https://levity.ai/" target="_blank">Levity</a>, a Berlin-based AI and Automation Startup.
-                I tend to write about tech and books, mostly. Plus, I'm always learning new things, recently I've been focusing on Java & JavaScript.<br>
-                <br>
-                What I'm reading:<br>
+                <p>I'm a Software Engineer in Madrid working at <a href="https://levity.ai/" target="_blank">Levity</a>, a Berlin-based AI and Automation Startup.</p>
+                <p>I tend to write about tech and books, mostly. Plus, I'm always learning new things and enjoy documenting my journey. Recently I've been focusing on Java, JavaScript and React.</p>
+                <p>What I'm reading:<br>
                 <a href="https://www.amazon.com/Infinite-Machine-Crypto-hackers-Building-Internet-ebook/dp/B07X8HS2WC" target="_blank">The Infinite Machine</a> by Camila Russo.<br>
                 <a href="https://www.amazon.com/Psychology-Money-Timeless-lessons-happiness/dp/0857197681" target="_blank">The Psychology of Money</a> by Morgan Housel.
                 </p>
@@ -41,8 +47,8 @@
                 <ul>
                 <li><a href="/">2021 Reading List: A Short Review</a></li>
                 <li><a href="/">How I Learned To Code (Not quite self-taught)</a></li>
-                <li><a href="/">Why I Started A Second Degree</a></li>
-                <li><a href="/">I Think You Might Need A Blog</a></li>
+                <li><a href="/">Why I Started A Second Bachelor's Degree</a></li>
+                <li><a href="/">I Think You Could Use A Blog</a></li>
                 </ul>
             </section>
 
