--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
             <section class="about">
                 <h3><u>About</u></h3>
                 <p>I'm a Software Engineer in Madrid working at <a href="https://levity.ai/" target="_blank">Levity</a>, a Berlin-based AI and Automation Startup.</p>
-                <p>I tend to write about tech and books, mostly. Plus, I'm always learning new things and enjoy documenting my journey. Recently I've been focusing on Java, JavaScript and React.</p>
+                <p>I tend to write about tech and books, mostly.</p>
+                <p>Plus, I'm always learning new things and enjoy documenting my journey. Recently I've been focusing on Java, JavaScript and React.</p>
                 <p>What I'm reading:<br>
                 <a href="https://www.amazon.com/Infinite-Machine-Crypto-hackers-Building-Internet-ebook/dp/B07X8HS2WC" target="_blank">The Infinite Machine</a> by Camila Russo.<br>
                 <a href="https://www.amazon.com/Psychology-Money-Timeless-lessons-happiness/dp/0857197681" target="_blank">The Psychology of Money</a> by Morgan Housel.
