New Blog Series

--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
                 <p>I tend to write about tech and books, mostly.</p>
                 <p>Plus, I'm always learning new things and enjoy documenting my journey. Recently I've been focusing on Java, JavaScript and React.</p>
                 <p>What I'm reading:<br>
-                <a href="https://www.amazon.com/Infinite-Machine-Crypto-hackers-Building-Internet-ebook/dp/B07X8HS2WC" target="_blank">The Infinite Machine</a> by Camila Russo.<br>
-                <a href="https://www.amazon.com/Psychology-Money-Timeless-lessons-happiness/dp/0857197681" target="_blank">The Psychology of Money</a> by Morgan Housel.
+                <a href="https://www.amazon.com/Royal-Assassin-Farseer-Trilogy-Book/dp/0553573411" target="_blank">Royal Assassin</a> by Robin Hobb.<br>
+                <a href="https://www.amazon.com/Fooled-Randomness-Hidden-Markets-Incerto/dp/0812975219" target="_blank">Fooled by Randomness</a> by Nassim Nicholas Taleb.
                 </p>
             </section>
 
             <section class="blog">
                 <h3><u>Blog</u></h3>
-                <i>---- Coming Soon ----</i>
+                <i>Disclaimer: I am often wrong. Although I try to minimize this.</i>
                 <ul>
                 <li><a href="/">2021 Reading List: A Short Review</a></li>
                 <li><a href="/">How I Learned To Code (Not quite self-taught)</a></li>
                 <li><a href="/">Why I Started A Second Bachelor's Degree</a></li>
-                <li><a href="/">I Think You Could Use A Blog</a></li>
+                <li><a href="/">Focus On Concepts (#1)</a></li>
                 </ul>
             </section>
 
