--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
             <section class="blog">
                 <h3><u>Blog</u></h3>
-                <i>Disclaimer: I am often wrong. Although I try to minimize this.</i>
+                <i>DISCLAIMER: I am often wrong and a terrible writer. Yet here I write.</i>
                 <ul>
                 <li><a href="/">2021 Reading List: A Short Review</a></li>
                 <li><a href="/">How I Learned To Code (Not quite self-taught)</a></li>
