--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="icons">
                 <a href="https://github.com/ugueto" target="_blank"><i class="fab fa-github"></i></a>
                 <a href="https://linkedin.com/in/juan-diego-ugueto/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="https://medium.com/@ugueto96" target="_blank"><i class="fab fa-medium"></i></a>
+                <a href="https://medium.com/@ugueto" target="_blank"><i class="fab fa-medium"></i></a>
                 <a href="https://twitter.com/ugu3to" target="_blank"><i class="fab fa-twitter"></i></a>
             </div>
             <hr>
