--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                 <h3><u>Blog</u></h3>
                 <i class="quote">"I am often wrong and a terrible writer. Yet here I am, writing."</i>
                 <ul>
-                <li><a href="/">2021 Reading List: A Short Review</a></li>
+                <li><a href="https://medium.com/@ugueto/2021-reading-list-a-short-review-7eccf1691f8a" target="_blank">2021 Reading List: A Short Review</a></li>
                 <li><a href="/">How I Learned To Code (Not quite self-taught)</a></li>
                 <li><a href="/">Why I Started A Second Bachelor's Degree</a></li>
-                <li><a href="/">Focus On Concepts (#1)</a></li>
+                <li><a href="https://medium.com/@ugueto/focus-on-concepts-introduction-4f2ab9c165f8" target="_blank">Focus On Concepts (#1)</a></li>
                 </ul>
             </section>
 
