New book addition

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
                 <p>Plus, I'm always learning new things and enjoy documenting my journey. Recently I've been focusing on Java, JavaScript and React.</p>
                 <p>What I'm reading:<br>
                 <a href="https://www.amazon.com/Royal-Assassin-Farseer-Trilogy-Book/dp/0553573411" target="_blank">Royal Assassin</a> by Robin Hobb.<br>
-                <a href="https://www.amazon.com/Fooled-Randomness-Hidden-Markets-Incerto/dp/0812975219" target="_blank">Fooled by Randomness</a> by Nassim Nicholas Taleb.
+                <a href="https://www.amazon.com/Fooled-Randomness-Hidden-Markets-Incerto/dp/0812975219" target="_blank">Fooled by Randomness</a> by Nassim Nicholas Taleb.<br>
+                <a href="https://eloquentjavascript.net/" target="_blank">Eloquent JavaScript</a> by Marijn Haverbeke.
                 </p>
             </section>
 
@@ -57,19 +58,9 @@
                 </ul>
             </section>
 
-            <section class="work">
-                <h3><u>Where I've Worked</u></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            </section>
-
-            <section class="study">
-                <h3><u>Where I've Studied</u></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            </section>
-
         <footer>
             <hr>
-            <p> &copy; 2021 - juan@levity.ai</p>
+            <p> &copy; 11111100101 - juan@levity.ai</p>
         </footer>
 
     </div>
