--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         <footer>
             <hr>
-            <p> &copy; 11111100101 - juan@levity.ai</p>
+            <p> &copy; 11111100101 - Contact: <a href="mailto:juan@levity.ai">Juan Diego Ugueto</a></p>
         </footer>
 
     </div>
