--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang='en'>
     
 <head>
-        <title>Juan Diego Ugueto</title>
+        <title>j15o</title>
         <meta name='author' content='ugueto96@gmail.com'>
         <meta name='description' content='Juan Ugueto Portfolio'>
         <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
@@ -37,7 +37,7 @@
 
             <section class="about">
                 <h3><u>About</u></h3>
-                <p>I'm a Software Engineer in Madrid working at <a href="https://levity.ai/" target="_blank">Levity</a>, a Berlin-based AI and Automation Startup.</p>
+                <p>&#128075 I'm a Software Engineer in Madrid working at <a href="https://levity.ai/" target="_blank">Levity</a>, a Berlin-based AI and Automation Startup.</p>
                 <p>I tend to write about tech and books, mostly.</p>
                 <p>Plus, I'm always learning new things and enjoy documenting my journey. Recently I've been focusing on Java, JavaScript and React.</p>
                 <p>What I'm reading:<br>
