--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang='en'>
     
 <head>
-        <title>j15o</title>
+        <title>Juan Diego Ugueto</title>
         <meta name='author' content='ugueto96@gmail.com'>
         <meta name='description' content='Juan Ugueto Portfolio'>
         <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
@@ -24,7 +24,7 @@
     <div class="container">
 
         <header>
-            <h1>Juan Diego Ugueto</h1>
+            <h1>j15o</h1>
             <p>Software Engineer</p>
             <div class="icons">
                 <a href="https://github.com/ugueto" target="_blank"><i class="fab fa-github"></i></a>
@@ -37,12 +37,11 @@
 
             <section class="about">
                 <h3><u>About</u></h3>
-                <p>&#128075 I'm a Software Engineer in Madrid working at <a href="https://levity.ai/" target="_blank">Levity</a>, a Berlin-based AI and Automation Startup.</p>
+                <p>&#128075 I'm Juan Diego Ugueto, a Software Engineer in Madrid working at <a href="https://levity.ai/" target="_blank">Levity</a>, a Berlin-based AI and Automation Startup.</p>
                 <p>I tend to write about tech and books, mostly.</p>
                 <p>Plus, I'm always learning new things and enjoy documenting my journey. Recently I've been focusing on Java, JavaScript and React.</p>
                 <p>What I'm reading:<br>
-                <a href="https://www.amazon.com/Royal-Assassin-Farseer-Trilogy-Book/dp/0553573411" target="_blank">Royal Assassin</a> by Robin Hobb.<br>
-                <a href="https://www.amazon.com/Fooled-Randomness-Hidden-Markets-Incerto/dp/0812975219" target="_blank">Fooled by Randomness</a> by Nassim Nicholas Taleb.<br>
+                <a href="https://www.goodreads.com/book/show/33396914-assassin-s-quest" target="_blank">Assassin's Quest</a> by Robin Hobb.<br>
                 <a href="https://eloquentjavascript.net/" target="_blank">Eloquent JavaScript</a> by Marijn Haverbeke.
                 </p>
             </section>
