--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
             <section class="blog">
                 <h3><u>Blog</u></h3>
-                <i class="quote">"I am fallible and a mediocre writer. Yet here I am, writing."</i>
+                <i class="quote">I am fallible and a mediocre writer.</i>
                 <ul>
                 <li><a href="https://medium.com/@ugueto/2021-reading-list-a-short-review-7eccf1691f8a" target="_blank">2021 Reading List: A Short Review</a></li>
                 <li><a href="/">How I Learned To Code (Not quite self-taught)</a></li>
