--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <p>Plus, I'm always learning new things and enjoy documenting my journey. Recently I've been focusing on Java, JavaScript and React.</p>
                 <p>What I'm reading:<br>
                 <a href="https://www.goodreads.com/book/show/33396914-assassin-s-quest" target="_blank">Assassin's Quest</a> by Robin Hobb.<br>
-                <a href="https://eloquentjavascript.net/" target="_blank">Eloquent JavaScript</a> by Marijn Haverbeke.
+                <a href="https://eloquentjavascript.net/" target="_blank">Eloquent JavaScript</a> by Marijn Haverbeke.<br>
                 <a href="https://www.roadtoreact.com/" target="_blank">The Road to React</a> by Robin Wieruch.
                 </p>
             </section>
