--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <p>I tend to write about tech and books, mostly.</p>
                 <p>Plus, I'm always learning new things and enjoy documenting my journey. Recently I've been focusing on Java, JavaScript and React.</p>
                 <p>What I'm reading:<br>
-                <a href="https://www.goodreads.com/book/show/33396914-assassin-s-quest" target="_blank">Assassin's Quest</a> by Robin Hobb.<br>
+                <a href="https://greenlights.com/#book" target="_blank">Greenlights</a> by Matthew McConaughey.<br>
                 <a href="https://eloquentjavascript.net/" target="_blank">Eloquent JavaScript</a> by Marijn Haverbeke.<br>
                 <a href="https://www.roadtoreact.com/" target="_blank">The Road to React</a> by Robin Wieruch.
                 </p>
