--- a/index.html
+++ b/index.html
@@ -41,11 +41,13 @@
                 <p>I tend to write about tech and books, mostly.</p>
                 <p>Plus, I'm always learning new things and enjoy documenting my journey. Recently I've been focusing on Java, JavaScript and React.</p>
                 <p>What I'm reading:<br>
-                <a href="https://www.goodreads.com/book/show/186074.The_Name_of_the_Wind" target="_blank">The Name of the Wind</a> by Patrick Rothfuss.<br>
-                <a href="https://www.goodreads.com/book/show/18050143-zero-to-one" target="_blank">Zero to One</a> by Peter Thiel.<br>
-                <a href="https://eloquentjavascript.net/" target="_blank">Eloquent JavaScript</a> by Marijn Haverbeke.<br>
-                <a href="https://www.roadtoreact.com/" target="_blank">The Road to React</a> by Robin Wieruch.
                 </p>
+                <ul>
+                    <li><a href="https://www.goodreads.com/book/show/186074.The_Name_of_the_Wind" target="_blank">The Name of the Wind</a> by Patrick Rothfuss.</li>
+                    <li><a href="https://www.goodreads.com/book/show/18050143-zero-to-one" target="_blank">Zero to One</a> by Peter Thiel.</li>
+                    <li><a href="https://eloquentjavascript.net/" target="_blank">Eloquent JavaScript</a> by Marijn Haverbeke.</li>
+                    <li><a href="https://www.roadtoreact.com/" target="_blank">The Road to React</a> by Robin Wieruch.</li>
+                </ul>
             </section>
 
             <section class="blog">
