--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 
             <section class="about">
                 <h3><u>About</u></h3>
-                <p>&#128075 I'm Juan Diego Ugueto, a Software Engineer in Madrid working at <a href="https://levity.ai/" target="_blank">Levity</a>, a Berlin-based AI and Automation Startup.</p>
-                <p>I tend to write about tech and books, mostly.</p>
-                <p>Plus, I'm always learning new things and enjoy documenting my journey. Recently I've been focusing on Java, JavaScript and React.</p>
-                <p>What I'm reading:<br>
+                <p>&#128075 I'm Juan Diego Ugueto, a Software Engineer in Madrid working at <a href="https://levity.ai/" target="_blank">Levity</a>, a Berlin-based AI and Automation Startup.<br>
+                Plus, I'm always learning new things and enjoy documenting my journey. Recently I've been focusing on Java, JavaScript and React.<br>
+                <br>
+                What I'm reading:<br>
                 </p>
                 <ul>
                     <li><a href="https://www.goodreads.com/book/show/186074.The_Name_of_the_Wind" target="_blank">The Name of the Wind</a> by Patrick Rothfuss.</li>
