--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <ul>
                     <li><a href="https://medium.com/@ugueto/2022-the-year-ahead-4dbef4b0fb4" target="_blank">2022 - The Year Ahead</a></li>
                     <li><a href="https://medium.com/@ugueto/2021-reading-list-a-short-review-7eccf1691f8a" target="_blank">2021 Reading List: A Short Review</a></li>
-                    <li><a href="/">Why I Started A Second Bachelor's Degree</a></li>
+                    <li><a href="/">Why I Switched Degrees</a></li>
                     <li><a href="https://medium.com/@ugueto/focus-on-concepts-introduction-4f2ab9c165f8" target="_blank">Focus On Concepts (#1)</a></li>
                 </ul>
             </section>
