--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
                 <p>I tend to write about tech and books, mostly.</p>
                 <p>Plus, I'm always learning new things and enjoy documenting my journey. Recently I've been focusing on Java, JavaScript and React.</p>
                 <p>What I'm reading:<br>
-                    <a href="https://www.goodreads.com/book/show/1215032.The_Wise_Man_s_Fear" target="_blank">The Wise Man's Fear</a> by Patrick Rothfuss.<br>
-                    <a href="https://eloquentjavascript.net/" target="_blank">Eloquent JavaScript</a> by Marijn Haverbeke.<br>
-                    <a href="https://www.roadtoreact.com/" target="_blank">The Road to React</a> by Robin Wieruch.
+                    <a href="https://www.goodreads.com/book/show/22609391-the-wright-brothers" target="_blank">The Wright Brothers</a> by David McCullough.<br>
                 </p>
             </section>
 
