--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <h3><u>Blog</u></h3>
                 <i class="quote">I am fallible and a mediocre writer.</i>
                 <ul>
-                    <li><a href="https://medium.com/@ugueto/" target="_blank">Naked In The Dark (On Cybervulnerability)</a></li>
+                    <li><a href="https://medium.com/@ugueto/naked-in-the-dark-on-cybervulnerability-cba1c52d1991" target="_blank">Naked In The Dark (On Cybervulnerability)</a></li>
                     <li><a href="https://medium.com/@ugueto/2022-the-year-ahead-4dbef4b0fb4" target="_blank">2022 - The Year Ahead</a></li>
                     <li><a href="https://medium.com/@ugueto/2021-reading-list-a-short-review-7eccf1691f8a" target="_blank">2021 Reading List: A Short Review</a></li>
                     <li><a href="https://medium.com/@ugueto/focus-on-concepts-introduction-4f2ab9c165f8" target="_blank">Mastering Concepts</a></li>
