--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <h3><u>About</u></h3>
                 <p>&#128075 I'm Juan Diego Ugueto, a Software Engineer in Madrid working at <a href="https://levity.ai/" target="_blank">Levity</a>, a Berlin-based AI and Automation Startup.</p>
                 <p>I tend to write about tech and books, mostly.</p>
-                <p>Plus, I'm always learning new things and enjoy documenting my journey. Recently I've been focusing on Java and Cybersecurity</p>
+                <p>Plus, I'm always learning new things and enjoy documenting my journey. Recently I've been focusing on mastering Java syntax, Data Structures and Algorithms, and Cybersecurity basics.</p>
                 <p>What I'm reading:<br>
                     <a href="https://www.goodreads.com/book/show/45100.Ship_of_Magic" target="_blank">Ship of Magic</a> by Robin Hobb.<br>
                 </p>
