--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                 <p>What I'm reading:<br>
                     <a href="https://www.goodreads.com/book/show/45100.Ship_of_Magic" target="_blank">Ship of Magic</a> by Robin Hobb.<br>
                 </p>
+                <p>What I'm listening to:<br>
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1DZ06evO3WxthS?utm_source=generator&theme=0" width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                </p>
             </section>
 
             <section class="blog">
