--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
             <section class="blog">
                 <h3><u>Blog</u></h3>
-                <i class="quote">I am fallible and a mediocre writer.</i>
+                <i class="quote">DISCLAIMER: I am fallible.</i>
                 <ul>
                     <li><a href="https://medium.com/@ugueto/naked-in-the-dark-on-cybervulnerability-cba1c52d1991" target="_blank">Naked In The Dark (On Cybervulnerability)</a></li>
                     <li><a href="https://medium.com/@ugueto/2022-the-year-ahead-4dbef4b0fb4" target="_blank">2022 - The Year Ahead</a></li>
