--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <p>I tend to write about tech and books, mostly.</p>
                 <p>Plus, I'm always learning new things and enjoy documenting my journey. Recently I've been focusing on Java, Data Structures and Algorithms, and Cybersecurity.</p>
                 <p>What I'm reading:<br>
-                    <a href="https://www.goodreads.com/book/show/45100.Ship_of_Magic" target="_blank">Ship of Magic</a> by Robin Hobb.<br>
+                    <a href="https://www.goodreads.com/book/show/68428.The_Final_Empire" target="_blank">Mistborn</a> by Brandon Sanderson.<br>
                 </p>
             </section>
 
