--- a/index.html
+++ b/index.html
@@ -37,9 +37,8 @@
 
             <section class="about">
                 <h3><u>About</u></h3>
-                <p>&#128075 I'm Juan Diego Ugueto, a Software Engineer in Madrid working at <a href="https://levity.ai/" target="_blank">Levity</a>, a Berlin-based AI and Automation Startup.</p>
-                <p>I tend to write about tech and books, mostly.</p>
-                <p>Plus, I'm always learning new things and enjoy documenting my journey. Recently I've been focusing on Java, Data Structures and Algorithms, and Cybersecurity.</p>
+                <p>&#128075 I'm Juan Diego Ugueto, a Software Engineer in Madrid.</p>
+                <p>I'm building something cool... More on that later &#128640</p>
                 <p>What I'm reading:<br>
                     <a href="https://www.goodreads.com/book/show/68429.The_Well_of_Ascension" target="_blank">The Well Of Ascension</a> by Brandon Sanderson.<br>
                 </p>
