--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 
             <section class="about">
                 <h3><u>About</u></h3>
-                <p>&#128075 I'm Juan Diego Ugueto, a Software Engineer in Madrid.</p>
-                <p>I'm building something cool... More on that later &#128640</p>
+                <p>&#128075 I'm Juan Diego Ugueto, a curiosity-driven Software Engineer in Madrid.</p>
+                <p>I'm currently improving my Back-End skills, learning about Django, Databases, APIs, Docker, etc. &#128640</p>
                 <p>What I'm reading:<br>
                     <a href="https://www.goodreads.com/book/show/68429.The_Well_of_Ascension" target="_blank">The Well Of Ascension</a> by Brandon Sanderson.<br>
                 </p>
@@ -59,7 +59,7 @@
 
         <footer>
             <hr>
-            <p> &copy; 11111100101 - Contact: <a href="mailto:juan@levity.ai">Juan Diego Ugueto</a></p>
+            <p><a href="mailto:ugueto96@gmail.com">Juan Diego Ugueto</a> &copy; 2022</p>
         </footer>
 
     </div>
