--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
                 <p>&#128075 I'm Juan Diego Ugueto, a curiosity-driven Software Engineer in Madrid.</p>
                 <p>I'm currently improving my Back-End skills, learning about Django, Databases, APIs, Docker, etc. &#128640</p>
                 <p>What I'm reading:<br>
-                    <a href="https://www.goodreads.com/book/show/68429.The_Well_of_Ascension" target="_blank">The Well Of Ascension</a> by Brandon Sanderson.<br>
+                    <a href="https://www.goodreads.com/book/show/7815.The_Year_of_Magical_Thinking" target="_blank">The Year of Magical Thinking</a> by Joan Didion.<br>
+                    <a href="https://www.goodreads.com/book/show/21412198-fallen-leaves" target="_blank">Fallen Leaves</a> by Will Durant.
                 </p>
             </section>
 
