--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
             <section class="about">
                 <h3><u>About</u></h3>
                 <p>&#128075 I'm Juan Diego Ugueto, a curiosity-driven Software Engineer in Madrid.</p>
-                <p>I'm currently improving my Back-End skills, learning about Django, Databases, APIs, Docker, etc. &#128640</p>
+                <p>My current goal is simply to write code every day.</p>
+                <iframe src="https://giphy.com/embed/Ld77zD3fF3Run8olIt" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/disneyplus-star-wars-the-mandalorian-madalorian-Ld77zD3fF3Run8olIt">via GIPHY</a></p>
                 <p>What I'm reading:<br>
-                    <a href="https://www.goodreads.com/book/show/7815.The_Year_of_Magical_Thinking" target="_blank">The Year of Magical Thinking</a> by Joan Didion.<br>
-                    <a href="https://www.goodreads.com/book/show/21412198-fallen-leaves" target="_blank">Fallen Leaves</a> by Will Durant.
+                    <a href="https://www.goodreads.com/book/show/13589182-mastery" target="_blank">Mastery</a> by Robert Greene.<br>
                 </p>
             </section>
 
