--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <h3><u>About</u></h3>
                 <p>&#128075 I'm Juan Diego Ugueto, a curiosity-driven Software Engineer in Madrid.</p>
                 <p>My current goal is simply to write code every day.</p>
-                <iframe src="https://giphy.com/embed/Ld77zD3fF3Run8olIt" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/disneyplus-star-wars-the-mandalorian-madalorian-Ld77zD3fF3Run8olIt">via GIPHY</a></p>
+                <iframe src="https://giphy.com/embed/Ld77zD3fF3Run8olIt" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
                 <p>What I'm reading:<br>
                     <a href="https://www.goodreads.com/book/show/13589182-mastery" target="_blank">Mastery</a> by Robert Greene.<br>
                 </p>
