--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
             <section class="about">
                 <h3><u>About</u></h3>
                 <p>&#128075 I'm Juan Diego Ugueto, a curiosity-driven Software Engineer in Madrid.</p>
-                <p>My current goal is simply to write code every day.</p>
-                <iframe src="https://giphy.com/embed/Ld77zD3fF3Run8olIt" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+                <p>My current goal is to write code every day.</p>
                 <p>What I'm reading:<br>
                     <a href="https://www.goodreads.com/book/show/13589182-mastery" target="_blank">Mastery</a> by Robert Greene.<br>
                 </p>
