New book + video

--- a/index.html
+++ b/index.html
@@ -38,9 +38,13 @@
             <section class="about">
                 <h3><u>About</u></h3>
                 <p>&#128075 I'm Juan Diego Ugueto, a curiosity-driven Software Engineer in Madrid.</p>
-                <p>My current goal is to write code <a href="https://johnresig.com/blog/write-code-every-day/">every day.</a></p>
+                
+                <p>My current goal is to write code <a href="https://johnresig.com/blog/write-code-every-day/">every day.</a><br>
+                    Inspired by John Danaher -> <a href="https://www.youtube.com/watch?v=2qdzjmW_Qy0&t=188s">Anyone can reinvent themselves in 5 years.</a>
+                </p>
+
                 <p>What I'm reading:<br>
-                    <a href="https://www.goodreads.com/book/show/13589182-mastery" target="_blank">Mastery</a> by Robert Greene.<br>
+                    <a href="https://www.goodreads.com/book/show/38348476-calypso" target="_blank">Calypso</a> by David Sedaris.<br>
                 </p>
             </section>
 
