New book update

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </p>
 
                 <p>What I'm reading:<br>
-                    <a href="https://www.goodreads.com/book/show/38348476-calypso" target="_blank">Calypso</a> by David Sedaris.<br>
+                    <a href="https://www.goodreads.com/book/show/43587154-jade-city" target="_blank">Jade City</a> by Fonda Lee.<br>
                 </p>
             </section>
 
