--- a/index.html
+++ b/index.html
@@ -38,13 +38,9 @@
             <section class="about">
                 <h3><u>About</u></h3>
                 <p>&#128075 I'm Juan Diego Ugueto, a curiosity-driven Software Engineer in Madrid.</p>
-                
-                <p>My current goal is to write code <a href="https://johnresig.com/blog/write-code-every-day/">every day.</a><br>
-                    Inspired by John Danaher -> <a href="https://www.youtube.com/watch?v=2qdzjmW_Qy0&t=188s">Anyone can reinvent themselves in 5 years.</a>
-                </p>
 
                 <p>What I'm reading:<br>
-                    <a href="https://www.goodreads.com/book/show/43587154-jade-city" target="_blank">Jade City</a> by Fonda Lee.<br>
+                    <a href="https://www.goodreads.com/book/show/13530973-antifragile" target="_blank">Antifragile</a> by Nassim Taleb.<br>
                 </p>
             </section>
 
