--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
             <section class="about">
                 <h3><u>About</u></h3>
-                <p>&#128075 I'm Juan Diego Ugueto, a curiosity-driven Software Engineer in Madrid.</p>
+                <p>&#128075 I'm Juan Diego Ugueto, a curiosity-driven Software Engineer living in Madrid.</p>
 
                 <p>What I'm reading:<br>
                     <a href="https://www.goodreads.com/book/show/13530973-antifragile" target="_blank">Antifragile</a> by Nassim Taleb.<br>
@@ -52,8 +52,6 @@
                     <li><a href="https://medium.com/@ugueto/2021-reading-list-a-short-review-7eccf1691f8a" target="_blank">2021 Reading List: A Short Review</a></li>
                     <li><a href="https://medium.com/@ugueto/focus-on-concepts-introduction-4f2ab9c165f8" target="_blank">Mastering Concepts</a></li>
                 </ul>
-                <p>What I'm listening to:<br>
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1DZ06evO3WxthS?utm_source=generator&theme=0" width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
                 </p>
             </section>
 
