--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
 
             <section class="about">
                 <h3><u>About</u></h3>
-                <p>&#128075 I'm Juan Diego Ugueto, a curiosity-driven Software Engineer living in Madrid.</p>
+                <p>&#128075 I'm Juan Diego Ugueto, a curiosity-driven Software Engineer living in Madrid and working at Swiss Re's cybersecurity department.</p>
 
                 <p>What I'm reading:<br>
                     <a href="https://www.goodreads.com/book/show/13530973-antifragile" target="_blank">Antifragile</a> by Nassim Taleb.<br>
+                    <a href="https://www.goodreads.com/book/show/13152847-the-tools" target="_blank">The Tools</a> by Phil Stutz & Barry Michels.<br>
+                    <a href="https://www.goodreads.com/book/show/30659.Meditations" target="_blank">Meditations</a> by Marcus Aurelius (re-reading).<br>
                 </p>
             </section>
 
