--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
             <section class="about">
                 <h3><u>About</u></h3>
-                <p>&#128075 I'm Juan Diego Ugueto, a curiosity-driven Software Engineer living in Madrid and working at Swiss Re's cybersecurity department.</p>
+                <p>&#128075 I'm Juan Diego Ugueto, a curiosity-driven Software Engineer living in Madrid.</p>
 
                 <p>What I'm reading:<br>
                     <a href="https://www.goodreads.com/book/show/13530973-antifragile" target="_blank">Antifragile</a> by Nassim Taleb.<br>
