--- a/index.html
+++ b/index.html
@@ -37,11 +37,13 @@
 
             <section class="about">
                 <h3><u>About</u></h3>
-                <p>&#128075 I'm Juan Diego Ugueto, a curiosity-driven Software Engineer living in Madrid.</p>
+                <p>&#128075 I'm Juan Diego Ugueto, a curiosity-driven Software Engineer from Caracas, living in Madrid. 
+                I currently work as a Software Engineer at Swiss Re's cyber risk department.
+                </p>
 
                 <p>What I'm reading:<br>
                     <a href="https://www.goodreads.com/book/show/13530973-antifragile" target="_blank">Antifragile</a> by Nassim Taleb.<br>
-                    <a href="https://www.goodreads.com/book/show/13152847-the-tools" target="_blank">The Tools</a> by Phil Stutz & Barry Michels.<br>
+                    <a href="https://www.goodreads.com/en/book/show/23492691-upside" target="_blank">Upside</a> by Jim Rendon.<br>
                 </p>
             </section>
 
