--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
                 <p>What I'm reading:<br>
                     <a href="https://www.goodreads.com/book/show/13530973-antifragile" target="_blank">Antifragile</a> by Nassim Taleb.<br>
-                    <a href="https://www.goodreads.com/en/book/show/23492691-upside" target="_blank">Upside</a> by Jim Rendon.<br>
+                    <a href="https://www.goodreads.com/book/show/55825273-the-comfort-book" target="_blank">The Comfort Book</a> by Matt Haig.<br>
                 </p>
             </section>
 
