--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
             <section class="about">
                 <h3><u>About</u></h3>
                 <p>&#128075 I'm Juan Diego Ugueto, a curiosity-driven Software Engineer from Caracas, living in Madrid. 
-                I currently work as a Software Engineer at Swiss Re's cyber risk department.
+                I currently work as a Software Engineer at Swiss Re's cybersecurity department.
                 </p>
 
                 <p>What I'm reading:<br>
                     <a href="https://www.goodreads.com/book/show/13530973-antifragile" target="_blank">Antifragile</a> by Nassim Taleb.<br>
-                    <a href="https://www.goodreads.com/book/show/55825273-the-comfort-book" target="_blank">The Comfort Book</a> by Matt Haig.<br>
+                    <a href="https://www.goodreads.com/book/show/94318.Awareness" target="_blank">Awareness</a> by Anthony de Mello.<br>
                 </p>
             </section>
 
