--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                 </p>
 
                 <p>What I'm reading:<br>
-                    <a href="https://www.goodreads.com/book/show/13530973-antifragile" target="_blank">Antifragile</a> by Nassim Taleb.<br>
-                    <a href="https://www.goodreads.com/book/show/94318.Awareness" target="_blank">Awareness</a> by Anthony de Mello.<br>
+                    <a href="https://www.goodreads.com/book/show/13530973-antifragile" target="_blank">Empire of Pain</a> by Patrick Radden Keefe.<br>
+                    <a href="https://www.goodreads.com/book/show/94318.Awareness" target="_blank">Awareness</a> by Anthony de Mello (Re-read).<br>
                 </p>
             </section>
 
