--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
         <title>Juan Diego Ugueto</title>
         <meta name='author' content='ugueto96@gmail.com'>
-        <meta name='description' content='Juan Ugueto Portfolio'>
+        <meta name='description' content='Personal website'>
         <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
         <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1'>
         <meta name='copyright' content='Juan Diego Ugueto'>
@@ -24,12 +24,11 @@
     <div class="container">
 
         <header>
-            <h1>j15o</h1>
+            <h1>Juan Diego Ugueto</h1>
             <p>Software Engineer</p>
             <div class="icons">
                 <a href="https://github.com/ugueto" target="_blank"><i class="fab fa-github"></i></a>
                 <a href="https://linkedin.com/in/juan-diego-ugueto/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="https://medium.com/@ugueto" target="_blank"><i class="fab fa-medium"></i></a>
                 <a href="https://twitter.com/ugu3to" target="_blank"><i class="fab fa-twitter"></i></a>
             </div>
             <hr>
@@ -37,23 +36,22 @@
 
             <section class="about">
                 <h3><u>About</u></h3>
-                <p>&#128075 I'm Juan Diego Ugueto, a curiosity-driven Software Engineer from Caracas, living in Madrid. 
-                I currently work as a Software Engineer at Swiss Re's cybersecurity department.
+                <p>&#128075 I'm Juan Diego Ugueto, a curiosity-driven Software Engineer.
                 </p>
 
-                <p>What I'm reading:<br>
-                    <a href="https://www.goodreads.com/book/show/13530973-antifragile" target="_blank">Empire of Pain</a> by Patrick Radden Keefe.<br>
-                    <a href="https://www.goodreads.com/book/show/94318.Awareness" target="_blank">Awareness</a> by Anthony de Mello (Re-read).<br>
+                <p>Weekly reads:<br>
+                    <a href="#" target="_blank">Foo bar</a><br>
+                    <a href="#" target="_blank">Foo bar bin</a><br>
                 </p>
             </section>
 
             <section class="blog">
-                <h3><u>Blog</u></h3>
+                <h3><u>Projects</u></h3>
                 <ul>
-                    <li><a href="https://medium.com/@ugueto/naked-in-the-dark-on-cybervulnerability-cba1c52d1991" target="_blank">On Cybervulnerability</a></li>
-                    <li><a href="https://medium.com/@ugueto/2022-the-year-ahead-4dbef4b0fb4" target="_blank">2022 - The Year Ahead</a></li>
-                    <li><a href="https://medium.com/@ugueto/2021-reading-list-a-short-review-7eccf1691f8a" target="_blank">2021 Reading List: A Short Review</a></li>
-                    <li><a href="https://medium.com/@ugueto/focus-on-concepts-introduction-4f2ab9c165f8" target="_blank">Mastering Concepts</a></li>
+                    <li><a href="#" target="_blank">Upcoming project #1</a></li>
+                    <li><a href="#" target="_blank">Upcoming project #2</a></li>
+                    <li><a href="#" target="_blank">Upcoming project #3</a></li>
+                    <li><a href="#" target="_blank">Upcoming project #4</a></li>
                 </ul>
                 </p>
             </section>
