Remove useless code

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang='en'>
     
 <head>
-        <title>Juan Diego Ugueto</title>
-        <meta name='author' content='ugueto96@gmail.com'>
+        <title>Juan Ugueto's site</title>
+        <meta name='author' content='Juan Diego Ugueto'>
         <meta name='description' content='Personal website'>
         <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
         <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1'>
@@ -12,10 +12,6 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
-        <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
-        <link rel="manifest" href="/site.webmanifest">
         <script src="https://kit.fontawesome.com/0d9ce62f43.js" crossorigin="anonymous"></script>
 </head>
 
@@ -24,8 +20,7 @@
     <div class="container">
 
         <header>
-            <h1>Juan Diego Ugueto</h1>
-            <p>Software Engineer</p>
+            <h3>Juan Ugueto's blog</h3>
             <div class="icons">
                 <a href="https://github.com/ugueto" target="_blank"><i class="fab fa-github"></i></a>
                 <a href="https://linkedin.com/in/juan-diego-ugueto/" target="_blank"><i class="fab fa-linkedin"></i></a>
@@ -36,8 +31,7 @@
 
             <section class="about">
                 <h3><u>About</u></h3>
-                <p>&#128075 I'm Juan Diego Ugueto, a curiosity-driven Software Engineer.
-                </p>
+                <p>I'm a curiosity-driven Software Engineer.</p>
 
                 <p>Weekly reads:<br>
                     <a href="#" target="_blank">Foo bar</a><br>
@@ -48,17 +42,15 @@
             <section class="blog">
                 <h3><u>Projects</u></h3>
                 <ul>
-                    <li><a href="#" target="_blank">Upcoming project #1</a></li>
-                    <li><a href="#" target="_blank">Upcoming project #2</a></li>
-                    <li><a href="#" target="_blank">Upcoming project #3</a></li>
-                    <li><a href="#" target="_blank">Upcoming project #4</a></li>
+                    <li>-</li>
+                    <li>-</li>
                 </ul>
                 </p>
             </section>
 
         <footer>
             <hr>
-            <p><a href="mailto:ugueto96@gmail.com">Juan Diego Ugueto</a> &copy; 2022</p>
+            <p><a href="mailto:ugueto96@gmail.com">Contact</a> - Juan Diego Ugueto &copy; 2022</p>
         </footer>
 
     </div>
