--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1'>
         <meta name='copyright' content='Juan Diego Ugueto'>
         <link href='./style.css' rel='stylesheet'>
+        <script src="https://kit.fontawesome.com/0d9ce62f43.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
