--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container">
 
         <header>
-            <h3>Juan Ugueto's blog</h3>
+            <h2>Juan Ugueto blog</h2>
             <div class="icons">
                 <a href="https://github.com/ugueto" target="_blank"><i class="fab fa-github"></i></a>
                 <a href="https://linkedin.com/in/juan-diego-ugueto/" target="_blank"><i class="fab fa-linkedin"></i></a>
@@ -28,11 +28,11 @@
 
             <section class="about">
                 <h3><u>About</u></h3>
-                <p>I'm a curiosity-driven Software Engineer.</p>
+                <p>I'm a Software Engineer working in Cybersecurity.</p>
 
-                <p>Weekly reads:<br>
-                    <a href="#" target="_blank">Foo bar</a><br>
-                    <a href="#" target="_blank">Foo bar bin</a><br>
+                <p>Weekly updates (27/11/2023):<br>
+                    [Article]<a href="https://www.bleepingcomputer.com/news/security/windows-hello-auth-bypassed-on-microsoft-dell-lenovo-laptops/" target="_blank">Windows Hello auth bypassed by security researchers</a><br>
+                    [Video]<a href="https://www.youtube.com/watch?v=zjkBMFhNj_g&t=784s" target="_blank">Intro to LLMs by Andrej Karpathy</a><br>
                 </p>
             </section>
 
